# CUDA_TRI_COLLISION_DETECT

./: CMakeLists.txt  README.md
config/: config.h.in
doc/: 实验报告.docx  实验报告.odt
include/: aabb.h  config.h  mat3f.h  tri.h  vec3f.h
src/: bvh.cpp  bvh.h  ccd.cpp  cd_gpu.cu  cd_gpu.cuh  cmesh.cpp  cmesh.h  cmodel.cpp  cubic.cpp  obj-viewer.cpp
